--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"><img class="profile__image_edit-button" src="./image/Edit Button.svg" alt=""></button>
+                    <button class="profile__edit-button"><img class="profile__image_edit-button" src="./image/Edit Button.svg" alt="кнопка редактирования"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button"><img class="add-button__image" src="./image/Vectorplus.svg" alt="" ></button>
+                <button class="profile__add-button"><img class="add-button__image" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
             </section>
             <section class="elements">
                 <div class="element">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="element">
                     <div class="element">
-                        <img src="./image/4 pic.png" alt="карачаевск" class="element__image">
+                        <img src="./image/4 pic.png" alt="эльбрус" class="element__image">
                         <div class="element__text">
                             <h2 class="element__title">Гора Эльбрус</h2>
                             <div class="element__container_like">
@@ -50,7 +50,7 @@
 
                 </div>
                 <div class="element">
-                    <img src="./image/6 pic.png" alt="карачаевск" class="element__image">
+                    <img src="./image/6 pic.png" alt="домай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
                         <div class="element__container_like">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./image/3 pic.png" alt="карачаевск" class="element__image">
+                    <img src="./image/3 pic.png" alt="эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Гора Эльбрус</h2>
                         <div class="element__container_like">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./image/5 pic.png" alt="карачаевск" class="element__image">
+                    <img src="./image/5 pic.png" alt="домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
                         <div class="element__container_like">
