--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2 class='footer__title'>© 2020 Mesto Russia</h2>
     </footer>
     </div>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
