--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img src="./image/Vector (3).svg" class='header__logo' alt="шапка лого">
+            <img src="./image/Vector1.svg" class='header__logo' alt="шапка лого">
         </header>
 
         <main class="main">
@@ -23,14 +23,14 @@
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"><img class="profile__image_edit-button" src="./image/Edit Button.svg" alt="кнопка редактирования"></button>
+                    <button class="profile__edit-button"><img class="profile__image_edit-button" src="./image/EditButton.svg" alt="кнопка редактирования"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
                 <button class="profile__add-button"><img class="add-button__image" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
             </section>
             <section class="elements">
                 <div class="element">
-                    <img src="./image/1 pic (2).png" alt="Карачаевск" class="element__image">
+                    <img src="./image/1pic.png" alt="Карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаевск</h2>
                         <div class="element__container_like">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="element">
                     <div class="element">
-                        <img src="./image/4 pic.png" alt="эльбрус" class="element__image">
+                        <img src="./image/4pic.png" alt="эльбрус" class="element__image">
                         <div class="element__text">
                             <h2 class="element__title">Гора Эльбрус</h2>
                             <div class="element__container_like">
@@ -50,7 +50,7 @@
 
                 </div>
                 <div class="element">
-                    <img src="./image/6 pic.png" alt="домай" class="element__image">
+                    <img src="./image/6pic.png" alt="домай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
                         <div class="element__container_like">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./image/3 pic.png" alt="эльбрус" class="element__image">
+                    <img src="./image/3pic.png" alt="эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Гора Эльбрус</h2>
                         <div class="element__container_like">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./image/5 pic.png" alt="домбай" class="element__image">
+                    <img src="./image/5pic.png" alt="домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
                         <div class="element__container_like">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="./image/2 pic.png" alt="карачаевск" class="element__image">
+                    <img src="./image/2pic.png" alt="карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаево-Что аа</h2>
                         <div class="element__container_like">
@@ -87,7 +87,7 @@
             </section>
             <div class="popup">
                 <div class="popup__container">
-                    <img src="./image/Close Icon.svg" class="popup__close">
+                    <img src="./image/CloseIcon.svg" alt="кнопка закрытия" class="popup__close">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form class="form__input">
                         <div class="input__container">
@@ -100,11 +100,12 @@
                     </form>
                 </div>
             </div>
-    </div>
-    </main>
-    <footer class="footer">
-        <h2 class='footer__title'>© 2020 Mesto Russia</h2>
-    </footer>
+        </main>
+
+
+        <footer class="footer">
+            <h2 class='footer__title'>© 2020 Mesto Russia</h2>
+        </footer>
     </div>
     <script src="./script.js"></script>
 </body>
