--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <main class="main">
             <section class="profile">
-                <div class="profile__container_avatar">
+                <div class="container_avatar">
                     <img src="./image/avatar.jpg" class="profile__avatar" alt="жак ив кусто">
                 </div>
                 <div class="profile__info">
