--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="profile__edit-button"><img class="profile__image-editbutton" src="./image/EditButton.svg" alt="кнопка редактирования"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button"><img class="add-button__image" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
+                <button class="profile__add-button"><img class="profile__image-addbutton" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
             </section>
             <section class="elements">
                 <div class="element">
