--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <img src="./image/1pic.png" alt="Карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаевск</h2>
-                        <div class="element__container_like">
+                        <div class="element__container-like">
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                         <img src="./image/4pic.png" alt="эльбрус" class="element__image">
                         <div class="element__text">
                             <h2 class="element__title">Гора Эльбрус</h2>
-                            <div class="element__container_like">
+                            <div class="element__container-like">
 
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                     <img src="./image/6pic.png" alt="домай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
-                        <div class="element__container_like">
+                        <div class="element__container-like">
 
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                     <img src="./image/3pic.png" alt="эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <div class="element__container_like">
+                        <div class="element__container-like">
 
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                     <img src="./image/5pic.png" alt="домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
-                        <div class="element__container_like">
+                        <div class="element__container-like">
 
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                     <img src="./image/2pic.png" alt="карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаево-Что аа</h2>
-                        <div class="element__container_like">
+                        <div class="element__container-like">
                         </div>
                     </div>
                 </div>
