--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 <div class="popup__container">
                     <img src="./image/CloseIcon.svg" alt="кнопка закрытия" class="popup__close">
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <form class="form__input">
-                        <div class="input__container">
+                    <form class="popup__form_input">
+                        <div class="popup__container_input">
                             <input type="text" class="popup__input popup__input_title">
                         </div>
-                        <div class="input__container">
+                        <div class="popup__container_input">
                             <input type="text" class="popup__input popup__input_subtitle">
                         </div>
                         <button class='popup__button' type="submit">Сохранить</button>
