--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Mesto</title>
+    <title>Место</title>
 </head>
 
 <body class="body">
@@ -33,8 +33,7 @@
                     <img src="./image/1pic.png" alt="Карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаевск</h2>
-                        <div class="element__container-like">
-                        </div>
+                        <button type="button" class="element__container-like"></button>
                     </div>
                 </div>
                 <div class="element">
@@ -42,9 +41,9 @@
                         <img src="./image/4pic.png" alt="эльбрус" class="element__image">
                         <div class="element__text">
                             <h2 class="element__title">Гора Эльбрус</h2>
-                            <div class="element__container-like">
+                            <button type="button" class="element__container-like"></button>
 
-                            </div>
+
                         </div>
                     </div>
 
@@ -53,49 +52,45 @@
                     <img src="./image/6pic.png" alt="домай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
-                        <div class="element__container-like">
+                        <button type="button" class="element__container-like"></button>
 
-                        </div>
+
                     </div>
                 </div>
                 <div class="element">
                     <img src="./image/3pic.png" alt="эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <div class="element__container-like">
+                        <button type="button" class="element__container-like"></button>
 
-                        </div>
+
                     </div>
                 </div>
                 <div class="element">
                     <img src="./image/5pic.png" alt="домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Домбай</h2>
-                        <div class="element__container-like">
+                        <button type="button" class="element__container-like"></button>
 
-                        </div>
+
                     </div>
                 </div>
                 <div class="element">
                     <img src="./image/2pic.png" alt="карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__title">Карачаево-Что аа</h2>
-                        <div class="element__container-like">
-                        </div>
+                        <button type="button" class="element__container-like"></button>
+
                     </div>
                 </div>
             </section>
             <div class="popup">
                 <div class="popup__container">
-                    <img src="./image/CloseIcon.svg" alt="кнопка закрытия" class="popup__close">
+                    <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg" alt="кнопка закрытия" class="popup__close"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <form class="popup__form-input">
-                        <div class="popup__container-input">
-                            <input type="text" class="popup__input popup__input_title">
-                        </div>
-                        <div class="popup__container-input">
-                            <input type="text" class="popup__input popup__input_subtitle">
-                        </div>
+                    <form name="form popup" class="popup__form-input">
+                        <input type="text" class="popup__input popup__input_type_title">
+                        <input type="text" class="popup__input popup__input_type_subtitle">
                         <button class='popup__button' type="submit">Сохранить</button>
                     </form>
                 </div>
@@ -104,10 +99,10 @@
 
 
         <footer class="footer">
-            <h2 class='footer__title'>© 2020 Mesto Russia</h2>
+            <p class='footer__title'>© 2020 Mesto Russia</p>
         </footer>
     </div>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
