--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"><img class="profile__image-editbutton" src="./image/EditButton.svg" alt="кнопка редактирования"></button>
+                    <button type="button" class="profile__edit-button"><img class="profile__image-editbutton" src="./image/EditButton.svg" alt="кнопка редактирования"></button>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button"><img class="profile__image-addbutton" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
+                <button type="button" class="profile__add-button"><img class="profile__image-addbutton" src="./image/Vectorplus.svg" alt="кнопка добавления фотографии" ></button>
             </section>
             <section class="elements">
                 <div class="element">
