--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="popup__bg-image">
                 <div class="popup-bg__container">
                     <button type="button" class="popup__image_close"></button>
-                    <img src="" alt="попап картинка" class="popup__bg_image">
+                    <img alt="попап картинка" class="popup__bg_image">
                     <p class="popup__text"></p>
                 </div>
             </div>
@@ -81,7 +81,7 @@
     <template class="element__template">
         <div class="element">
             <button type="button" class="element__delete-image"></button>
-            <img src="" alt="Карачаевск" class="element__image">
+            <img  alt="Карачаевск" class="element__image">
 
             <div class="element__text">
                 <h2 class="element__title"></h2>
