--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-            <div class="popup__card">
+            <div class="popup popup__card">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close popup__card-button_close"><img src="./image/CloseIcon.svg"
                     alt="кнопка закрытия" class="popup__close popup__card_close"></button>
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="popup__bg-image">
+            <div class="popup popup__bg-image">
                 <div class="popup-bg__container">
                     <button type="button" class="popup__image_close"></button>
                     <img alt="попап картинка" class="popup__bg_image">
