--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-            <div class="popup popup__card">
+            <div class="popup popup-card">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close popup__card-button_close"><img src="./image/CloseIcon.svg"
                     alt="кнопка закрытия" class="popup__close popup__card_close"></button>
