--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="popup popup-card">
                 <div class="popup__container">
-                    <button type="button" class="popup__button-close popup__card-button_close"><img src="./image/CloseIcon.svg"
+                    <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
                     alt="кнопка закрытия" class="popup__close popup__card_close"></button>
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form-card">
