--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="popup popup-card">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
-                    alt="кнопка закрытия" class="popup__close popup-card_close"></button>
+                    alt="кнопка закрытия" class="popup__close popup__close-card"></button>
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form-card">
                         <input type="text" class="popup__input popup__input_type_name" placeholder="Название" />
