--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="popup popup__bg-image">
+            <div class="popup popup-bg_image">
                 <div class="popup-bg__container">
                     <button type="button" class="popup__image_close"></button>
                     <img alt="попап картинка" class="popup__bg_image">
