--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="popup popup-bg">
                 <div class="popup-bg__container">
                     <button type="button" class="popup__image_close"></button>
-                    <img alt="попап картинка" class="popup__bg_image">
+                    <img alt="попап картинка" class="popup-bg_image">
                     <p class="popup__text"></p>
                 </div>
             </div>
