--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="popup popup-bg">
                 <div class="popup-bg__container">
-                    <button type="button" class="popup-bg__image_close"></button>
+                    <button type="button" class="popup-bg__close"></button>
                     <img alt="попап картинка" class="popup-bg__image">
                     <p class="popup__text"></p>
                 </div>
