--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="elements">
 
             </section>
-            <div class="popup">
+            <div class="popup popup__edit">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
                             alt="кнопка закрытия" class="popup__close"></button>
