--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="elements">
 
             </section>
-            <div class="popup popup-edit">
+            <div class="popup popup_type_edit ">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
                             alt="кнопка закрытия" class="popup__close"></button>
@@ -50,7 +50,7 @@
 
 
 
-            <div class="popup popup-card">
+            <div class="popup popup_type_card">
                 <div class="popup__container">
                     <button type="button" class="popup__button-close"><img src="./image/CloseIcon.svg"
                     alt="кнопка закрытия" class="popup__close popup__close-card"></button>
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="popup popup-bg">
+            <div class="popup popup_type_image">
                 <div class="popup-bg__container">
                     <button type="button" class="popup-bg__close"></button>
                     <img alt="попап картинка" class="popup-bg__image">
