--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="popup popup_type_image">
-                <div class="popup__container_type_image">
+                <div class="popup__container_image">
                     <button type="button" class="popup-bg__close"></button>
                     <img alt="попап картинка" class="popup-bg__image">
                     <p class="popup__text"></p>
