--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
             <div class="popup popup_type_image">
                 <div class="popup__container-image">
-                    <button type="button" class="popup-bg__close"></button>
-                    <img alt="попап картинка" class="popup-bg__image">
+                    <button type="button" class="popup__close-image"></button>
+                    <img alt="попап картинка" class="popup__image">
                     <p class="popup__text"></p>
                 </div>
             </div>
