--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             alt="кнопка закрытия" class="popup__close"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
-                        <fieldset class="popup__form_set">
+                        <fieldset class="popup__form-set">
                             <label class="form__field">
                                 <input id='popup__input_title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
                                 <span class="popup__input_error popup__input_title_error"></span>
