--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
                         <fieldset class="popup__form-set">
-                            <label class="form__field">
+                            <label class="popup__form-field">
                                 <input id='popup__input_title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
                                 <span class="popup__input_error popup__input_title_error"></span>
                             </label>
@@ -63,7 +63,7 @@
                     alt="кнопка закрытия" class="popup__close popup__close-card"></button>
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form-card" novalidate>
-                        <fieldset class="form__set">
+                        <fieldset class="popup__form-set">
                             <label class="form__field">
                                 <input id='popup__input_name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
                                 <span class="popup__input_error popup__input_name_error"></span>
