--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <input id='popup__input_title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
                                 <span class="popup__input_error popup__input_title_error"></span>
                             </label>
-                            <label class="form__field">
+                            <label class="popup__form-field">
                                 <input id='popup__input_subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
                                 <span class="popup__input_error popup__input_subtitle_error"></span>
                             </label>
@@ -64,11 +64,11 @@
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form-card" novalidate>
                         <fieldset class="popup__form-set">
-                            <label class="form__field">
+                            <label class="popup__form-field">
                                 <input id='popup__input_name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
                                 <span class="popup__input_error popup__input_name_error"></span>
                             </label>
-                            <label class="form__field">
+                            <label class="popup__form-field">
                                 <input id='popup__input_link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
                                 <span class="popup__input_error popup__input_link_error"></span>
                              </label>
