--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
                                 <input id='popup__input_title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
-                                <span class="popup__input_error popup__input_title_error"></span>
+                                <span class="popup__input-error popup__input-error_title"></span>
                             </label>
                             <label class="popup__form-field">
                                 <input id='popup__input_subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
