--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </label>
                             <label class="popup__form-field">
                                 <input id='popup__input_subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
-                                <span class="popup__input-error popup__subinput-error_title"></span>
+                                <span class="popup__input-error popup__input-error_subtitle"></span>
                             </label>
                             <button class='popup__button' type="submit">Сохранить</button>
                         </fieldset>
@@ -65,12 +65,12 @@
                     <form class="popup__form popup__form-card" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='popup__input_name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
-                                <span class="popup__input-error popup__input-error_name"></span>
+                                <input id='popup__input-name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
+                                <span class="popup__input-error popup__input-name_error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='popup__input_link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
-                                <span class="popup__input-error popup__input-error_link"></span>
+                                <input id='popup__input-link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
+                                <span class="popup__input-error popup__input-link_error"></span>
                              </label>
                             <button class='popup__button' type="submit">Создать</button>
                         </fieldset>
