--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                     <form class="popup__form popup__form-card" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='popup__input-name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
-                                <span class="popup__input-error popup__input-name_error"></span>
+                                <input id='input-name' type="text" minlength="2" maxlength="30" required class="popup__input popup__input_type_name" placeholder="Название" />
+                                <span class="popup__input-error input-name-error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='popup__input-link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
-                                <span class="popup__input-error popup__input-link_error"></span>
+                                <input id='input-link' type="url" required class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" />
+                                <span class="popup__input-error input-link-error"></span>
                              </label>
                             <button class='popup__button' type="submit">Создать</button>
                         </fieldset>
