--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <form name="form popup" class="popup__form popup__form-input" novalidate>
                         <fieldset class="popup__form-set">
                             <label class="popup__form-field">
-                                <input id='popup__input_title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
-                                <span class="popup__input-error popup__input-error_title"></span>
+                                <input id='input-title' type="text" minlength="2" maxlength="40" required class="popup__input popup__input_type_title">
+                                <span class="popup__input-error input-title-error"></span>
                             </label>
                             <label class="popup__form-field">
-                                <input id='popup__input_subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
-                                <span class="popup__input-error popup__input-error_subtitle"></span>
+                                <input id='input-subtitle' type="text" minlength="2" maxlength="200" required class="popup__input popup__input_type_subtitle">
+                                <span class="popup__input-error input-subtitle-error"></span>
                             </label>
                             <button class='popup__button' type="submit">Сохранить</button>
                         </fieldset>
